2008-01-04  Neal H. Walfield  <neal@gnu.org>

	* cap.h (OID_FMT): Prefix OID value with 0x.

2008-01-03  Neal H. Walfield  <neal@gnu.org>

	* mutex.h: Don't include <l4/ipc.h>.  Include <hurd/lock.h>.
	(struct ss_lock_trace): Move from here..
	* lock.h: ... to this new file.
	* mutex.h (SS_LOCK_TRACE_COUNT): Likewise.
	(ss_mutex_lock): Likewise.
	(ss_mutex_lock): Likewise.
	(SS_MUTEX_LOCK): Likewise.
	(SS_MUTEX_LOCK_WAIT): Likewise.
	(SS_MUTEX_UNLOCK): Likewise.
	(SS_MUTEX_TRYLOCK): Likewise.
	(SS_MUTEX_TRYLOCK_BLOCKED): Likewise.
	(ss_lock_trace_dump): Likewise.
	(ss_mutex_trace_add): Likewise.
	(ss_mutex_lock): To wait, call __ss_lock_wait.
	(ss_mutex_unlock): To wakeup a thread, use __ss_lock_wakeup.
	(ss_mutex_lock): New define.
	(ss_mutex_unlock): Likewise.
	(ss_mutex_trylock): Likewise.
	* Makefile.am (includehurd_HEADERS): Add lock.h.
	* headers.m4: Create link from ../include/hurd/lock.h to
	hurd/lock.h.

2008-01-02  Neal H. Walfield  <neal@gnu.org>

	* thread.h (struct exception_page): Make mode bits a union thereby
	providing straightforward access to the raw bits.  Add field crc.

2008-01-01  Neal H. Walfield  <neal@gnu.org>

	* stddef.h (do_debug) [DEBUG_ELIDE]: Make a proper conditional.
	(debug): Don't change definition depending on DEBUG_ELIDE, always
	use the full definition relying on do_debug to do the right thing.

2008-01-01  Neal H. Walfield  <neal@gnu.org>

	* activity.h (RM_activity_properties): Rename...
	(RM_activity_policy): ... to this.  Update users.
	(struct activity_memory_policy): New structure.
	(ACTIVITY_MEMORY_POLICY): New definition.
	(ACTIVITY_MEMORY_POLICY_VOID): Likewise.
	(struct activity_policy): New structure.
	(ACTIVITY_POLICY): New definition.
	(ACTIVITY_POLICY_VOID): Likewise.
	(ACTIVITY_PROPERTIES_PRIORITY_SET): Rename...
	(ACTIVITY_POLICY_SIBLING_REL_PRIORITY_SET): ... to this.  Update
	users.
	(ACTIVITY_PROPERTIES_WEIGHT_SET): Rename...
	(ACTIVITY_POLICY_SIBLING_REL_WEIGHT_SET): ... to this.  Update
	users.